Feat: swagger and user router
